--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
     <link rel = "Shortcut Icon" href="pictures/webicon.ico">
 
-	<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Righteous|Roboto+Condensed|Waiting+for+the+Sunrise" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Righteous|Roboto+Condensed|Waiting+for+the+Sunrise|Roboto+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/libs/font-awesome.min.css">
@@ -87,11 +87,10 @@
 											<li class=active>
 												<a href="aboutme.html" >Me</a>
 											</li>
-<!--
-											<li>
-												<a href="contact.html">Explore</a>
+                                            <li>
+												<a href="./resume.pdf" target="_blank">Resume</a>
 											</li>
--->
+
 										</ul>
 									</nav>
 								</div>
@@ -146,30 +145,22 @@
                                   <span>!</span>                 
                                 </h2>
                             <br>
-                            <h2 style="text-align: center" >
-                            <img src="pictures/me.png"></h2>
+                            <div style="text-align: center; ">
+                                <img src="pictures/me.svg" width="80%">
+                            </div>
                         </div>
 
 								<!-- The Content -->
                                 <br>
 								<div class="the-content">
-                                    <div class="typedtext">
-                                    Hanyu is 
-                                    <a href="" class="typewrite" data-period="2000" data-type='[ "a Designer.", "an Observer.", "a Cyborg." ]'>
-                                        <span class="wrap"></span>
-                                      </a>
-                                    </div>
-									
-									<p style="font-size: 12pt; text-align: justify">
-										Hanyu is an experience designer who believes that design is an endless journey to "better solutions". She is now learning Human-Computer Interaction at Georgia Tech. Before moving to Atlanta, she studied in both Communications (Advertising) and Industrial Design.  <br> 
+									<p style="font-family: 'Roboto Mono', monospace; font-size: 12pt; text-align: justify">
+                                        Hanyu is an experience designer who believes that design is <span style="background-color: #FFDA00; color: #000;">an endless journey to "better solutions"</span>. She is now pursuing a Masters degree in <span style="font-weight: bold">Human-Computer Interaction at Georgia Tech</span>. Before moving to Atlanta, she studied in both Communications (Advertising) and Industrial Design.  <br> 
                                         <br>
-                                        She doesn't like to be defined by titles, because definitions of everything could be changed as society moves forward. She likes to break boundaries, and is always absorbing new knowledge so as to understand human better. 
+                                        Hanyu doesn't like to be defined by titles. She believes definitions of everything would evolve as society moves forward. Therefore, <span style="background-color: #FFDA00;color: #000;">she likes to break boundaries</span>: Coming from a non-tech background, she pushes herself to learn trending technologies like machine learning and augmented reality to empower her designs. Apart from digital products, <span style="font-weight: bold">she is interested in exploring designs at the intersection of software and hardware, online and offline.</span>  
                                         <br><br>
-                                        She is now looking for challenges to practice her skills and learn more stuff. 
+                                        No matter how interfaces changes, <span style="background-color: #FFDA00;color: #000;">design is the key to make technologies accessible and serve people better</span>. 
 									</p>
-								            <object data="resume.pdf" type="application/pdf" width=100% height="820px">
-                                            <embed src="resume.pdf">
-                                            </object>
+								        
 								</div>
                         <br>
 								<!-- End The Content -->
