--- a/aboutme.html
+++ b/aboutme.html
@@ -158,7 +158,8 @@
                                         <br>
                                         Hanyu doesn't like to be defined by titles. She believes definitions of everything would evolve as society moves forward. Therefore, <span style="background-color: #FFDA00;color: #000;">she likes to break boundaries</span>: Coming from a non-tech background, she pushes herself to learn trending technologies like machine learning and augmented reality to empower her designs. Apart from digital products, <span style="font-weight: bold">she is interested in exploring designs at the intersection of software and hardware, online and offline.</span>  
                                         <br><br>
-                                        No matter how interfaces changes, <span style="background-color: #FFDA00;color: #000;">design is the key to make technologies accessible and serve people better</span>. 
+                                        No matter how interfaces changes, <span style="background-color: #FFDA00;color: #000;">design is the key to make technologies accessible and serve people better</span>. <br><br>
+                                        When she's not designing, you can find her going to theaters for musicals & dramas, reading history, sociology & science fictions, and drawing. 
 									</p>
 								        
 								</div>
