--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								</h2>
 							</div>
                             
-                            <div class="project-item" data-text="venmo">
+                            <div class="project-item" data-text="lifemate">
                                 <h2 class="strapline">
 									<a>I experiment with VUI to solve problems…</a><br>
 								</h2>
