--- a/projects/protected.html
+++ b/projects/protected.html
@@ -204,7 +204,7 @@
           }
         }
         .ui-modal {
-          --color-primary: #FFDA00;
+          --color-primary: #4FB3BF;
           --color-error: #FF611B;
           --color-success: #4EE2BA;
           background-color: #fff;
@@ -407,7 +407,7 @@
                   <div class="ui-title">This project is protected</div>
                   <div class="ui-subtitle">
                     <span data-show="idle">
-                      Please enter the password to open it.
+                      Please enter the password to get the link.
                     </span>
                     <span data-show="validating">
                       Validating...
@@ -434,7 +434,7 @@
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">INTERCEPT</p> </a>
+                        </div><br><br><h3 style="font-weight: bold; font-size: .8em; text-align: center">STARBUCKS</h3> </a>
                     </div>
                 
                   
@@ -444,7 +444,7 @@
                              <span class="shift" >
                                 &raquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">TEZIGN</p> </a>
+                        </div><br><br><h3 style="font-weight: bold; font-size: .8em; text-align: center">INTERCEPT</h3> </a>
                     </div>
                 <br><br>
 			</footer>
