--- a/projects/protected.html
+++ b/projects/protected.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Hanyu Gong | Be Boundless</title>		
+	<title>Hanyu Gong </title>		
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content=" An observer, a traveler, and of course, a designer.">
  	<meta name="robots" content="noarchive"> 	
