--- a/projects/lifemate-protected.html
+++ b/projects/lifemate-protected.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Hanyu Gong | Google Design Challenge</title>		
+	<title>Hanyu Gong</title>		
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content=" An observer, a traveler, and of course, a designer.">
  	<meta name="robots" content="noarchive"> 	
@@ -10,7 +10,7 @@
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Nanum+Myeongjo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Nanum+Myeongjo" rel="stylesheet">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="./assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
