--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <h2 class="strapline">
 									<a>I experiment with VUI to solve problems…</a><br>
 								</h2>
-								<a href="projects/protected.html" target="_blank">
+								<a href="projects/lifemate-protected.html" target="_blank">
 									<img src="pictures/lifemate.png" alt="" onMouseOver="this.src='pictures/lifemate_hover.png'" onMouseOut="this.src='pictures/lifemate.png'">
 								</a>
 
