--- a/projects/frog.html
+++ b/projects/frog.html
@@ -77,10 +77,17 @@
 
                                     </tbody>
                             </table>
-                            <p>Ever since I started learning design, <a href="https://www.frogdesign.com/" target="_blank" style="font-weight: bold">frog design</a> has been added to my dream list. I never thought the opportunity came so fast, and it came twice! 
+                            <p>Ever since I started learning design, <a href="https://www.frogdesign.com/" target="_blank" style="font-weight: bold">frog Design</a> has been added to my dream list. I never thought the opportunity came so fast, and it came twice! 
                             </p>
-                            <p>From May to October (with May-Aug in studio, Sept & Oct remotely) as well as in December 2018, I interned at frog Shanghai studio as an interaction designer and partcipated in two projects. Due to the Non-Disclosure Agreement, I am not able to to share project details and client information, but I would love to share my overall experience and learnings during the past half of a year.</p>
-                            </div>
+                            <p>From May to October (with May-Aug in studio, Sept & Oct remotely) as well as in December 2018, I interned at frog Shanghai studio as an interaction designer and partcipated in two projects. Due to the Non-Disclosure Agreement, I am not able to to share project details, but I would love to share my overall experience and learnings. BTW, one of the project I worked on has launched product, please click the button below to learn more about it!</p>
+                            </div><br><br>
+                            
+                        <div class="container" style=" text-align: center">
+                            <a href="https://www.frogdesign.com/work/xiaomi-family-home-appliances" target="_blank">
+                            <button style="background-color: rgba(0,0,0); box-shadow: 0 5px 20px 0 rgba(0,0,0,.06);" >
+                                <span style="color:#fff ">XIAOMI INTERACTION DESIGN LANGUAGE</span>
+                            </button></a>
+                        </div>
 						</div>
 					</section>
                 
